first-project/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: first-project
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: first-project
  template:
    metadata:
      labels:
        app: first-project
    spec:
      containers:
      - name:  first-project
        image: paulopanini/first-project:latest
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
