first-project/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: first-project
spec:
  type: ClusterIP
  selector:
    app: first-project
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
